; ModuleID = '/home/carl/AnghaBench/TDengine/src/client/src/extr_tscStream.c_tscGetRetryDelayTime.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/client/src/extr_tscStream.c_tscGetRetryDelayTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TSDB_TIME_PRECISION_MICRO = common dso_local global i64 0, align 8
@tsStreamCompRetryDelay = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64)* @tscGetRetryDelayTime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tscGetRetryDelayTime(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca float, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store float 0x3FD3333340000000, float* %6, align 4
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* @TSDB_TIME_PRECISION_MICRO, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = sdiv i32 %12, 1000
  store i32 %13, i32* %4, align 4
  br label %14

14:                                               ; preds = %11, %2
  %15 = load i32, i32* @tsStreamCompRetryDelay, align 4
  %16 = sitofp i32 %15 to float
  %17 = load float, float* %6, align 4
  %18 = fmul float %16, %17
  %19 = fptosi float %18 to i32
  store i32 %19, i32* %7, align 4
  %20 = call i32 (...) @rand()
  %21 = load i32, i32* %7, align 4
  %22 = srem i32 %20, %21
  %23 = load i32, i32* @tsStreamCompRetryDelay, align 4
  %24 = add nsw i32 %22, %23
  %25 = sext i32 %24 to i64
  %26 = mul nsw i64 %25, 1000
  %27 = trunc i64 %26 to i32
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* %7, align 4
  %30 = icmp slt i32 %28, %29
  br i1 %30, label %31, label %33

31:                                               ; preds = %14
  %32 = load i32, i32* %4, align 4
  store i32 %32, i32* %3, align 4
  br label %35

33:                                               ; preds = %14
  %34 = load i32, i32* %7, align 4
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %33, %31
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @rand(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
